--- a/afood/templates/afood/add-booking.html
+++ b/afood/templates/afood/add-booking.html
@@ -32,7 +32,7 @@
         <ul>
           <li>
             <div class="card p-3">
-              <form action="#" class="w-100 d-block">
+              <form action="/add-booking" class="w-100 d-block" method="post">
                 <div class="row">
                   <div class="col-sm-6 mb-3">
                     <label for="datepicker">Choose a date</label>
@@ -56,12 +56,12 @@
                       </select>
                     </div>
                     <div class="col-sm-6">
-                      <label for="table-no">How many tables?</label>
-                      <input type="number" class="form-control" id="table-no" name="table-no">
+                      <label for="mb_table">How many tables?</label>
+                      <input type="number" class="form-control" id="table-no" name="mb_table">
 
                     </div>
                   </div>
-                  <button class="btn btn-warning mt-3">Book</button>
+                  <button class="btn btn-warning mt-3" type="submit">Book</button>
                 </div>
               </form>
             </div>
