--- a/afood/templates/afood/login.html
+++ b/afood/templates/afood/login.html
@@ -14,7 +14,7 @@
                     <input type="password" placeholder="******" class="form-control mb-3 shadow-sm" name="password">
                     <button class="btn btn-warning" type="submit">login</button>
                     <strong>- or -</strong>
-                    <a href="#">Register</a>   
+                    <a href="{% url 'register' %}">Register</a>   
                 </form>
             </div>
         </div>
