--- a/afood/templates/afood/add-booking.html
+++ b/afood/templates/afood/add-booking.html
@@ -3,6 +3,7 @@
 <html lang="en">
   {% include "afood/partials/_header.html" %}
   <body style="background-color: #11111f">
+    {% include "afood/partials/_nav.html" %}
     <nav class="navbar navbar-expand-lg bg-dark ">
       <div class="container-fluid">
         <a class="navbar-brand text-warning" href="#"></a>
