--- a/afood/templates/afood/add-booking.html
+++ b/afood/templates/afood/add-booking.html
@@ -4,25 +4,6 @@
   {% include "afood/partials/_header.html" %}
   <body style="background-color: #11111f">
     {% include "afood/partials/_nav.html" %}
-    <nav class="navbar navbar-expand-lg bg-dark ">
-      <div class="container-fluid">
-        <a class="navbar-brand text-warning" href="#"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-
-              <button class="btn btn-sm btn-danger"> <i class="fa fa-sign-out"></i> &nbsp; Log out</button>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
     <div
       class="d-flex justify-content-center align-items-center vh-100 p-3 container"
     >
@@ -33,7 +14,8 @@
         <ul>
           <li>
             <div class="card p-3">
-              <form action="/add-booking" class="w-100 d-block" method="post">
+              <form action="{% url 'addbooking' %}" class="w-100 d-block" method="post">
+                {% csrf_token %}
                 <div class="row">
                   <div class="col-sm-6 mb-3">
                     <label for="datepicker">Choose a date</label>
