amend date format

--- a/afood/templates/afood/partials/_footer.html
+++ b/afood/templates/afood/partials/_footer.html
@@ -8,6 +8,7 @@
     daysOfWeekHighlighted: "6,0",
     autoclose: true,
     todayHighlight: true,
+    format: 'yyyy/mm/dd'
   });
   $("#datepicker").datepicker("setDate", new Date());
 </script>
