add date format

--- a/afood/templates/afood/partials/_footer.html
+++ b/afood/templates/afood/partials/_footer.html
@@ -8,7 +8,8 @@
     daysOfWeekHighlighted: "6,0",
     autoclose: true,
     todayHighlight: true,
-    format: 'yyyy/mm/dd'
+    format: 'yyyy/mm/dd',
+    startDate: new Date()
   });
   $("#datepicker").datepicker("setDate", new Date());
 </script>
