--- a/afood/templates/afood/add-booking.html
+++ b/afood/templates/afood/add-booking.html
@@ -39,8 +39,8 @@
                       </select>
                     </div>
                     <div class="col-sm-6">
-                      <label for="mb_table">How many tables?</label>
-                      <input type="number" class="form-control" id="table-no" name="mb_table">
+                      <label for="mb_tables">How many tables?</label>
+                      <input type="number" class="form-control" id="mb_tables" name="mb_tables">
 
                     </div>
                   </div>
